Pop/Grammar.output
Terminals unused in grammar

   T_ENUM
   T_FOR
   T_GOTO
   T_NAMESPACE
   T_ELLIPSIS
   T_PTR_OP


Grammar

    0 $accept: start $end

    1 start: stmts

    2 param_decl: T_IDENTIFIER
    3           | T_IDENTIFIER '=' expr

    4 param_list: param_decl
    5           | param_list ',' param_decl

    6 func_expr: T_FUNCTION '(' param_list ')' '{' '}'
    7          | T_FUNCTION '(' param_list ')' '{' stmts '}'
    8          | T_FUNCTION '(' ')' '{' stmts '}'
    9          | T_FUNCTION '(' ')' '{' '}'

   10 constant: T_NULL
   11         | T_TRUE
   12         | T_FALSE
   13         | T_INT
   14         | T_FLOAT
   15         | T_STRING
   16         | T_IDENTIFIER

   17 prim_expr: constant
   18          | '(' expr ')'
   19          | func_expr

   20 arg_list: expr
   21         | arg_list ',' expr

   22 post_expr: prim_expr
   23          | post_expr '[' expr ']'
   24          | post_expr '(' ')'
   25          | post_expr '(' arg_list ')'
   26          | post_expr '.' T_IDENTIFIER
   27          | post_expr T_INC_OP
   28          | post_expr T_DEC_OP

   29 unary_expr: post_expr
   30           | T_INC_OP unary_expr
   31           | T_DEC_OP unary_expr
   32           | '+' unary_expr
   33           | '-' unary_expr
   34           | '!' unary_expr
   35           | '~' unary_expr

   36 mul_expr: unary_expr
   37         | mul_expr '*' unary_expr
   38         | mul_expr '/' unary_expr
   39         | mul_expr '%' unary_expr

   40 add_expr: mul_expr
   41         | add_expr '+' mul_expr
   42         | add_expr '-' mul_expr

   43 shift_expr: add_expr
   44           | shift_expr T_LEFT_OP add_expr
   45           | shift_expr T_RIGHT_OP add_expr

   46 rel_expr: shift_expr
   47         | rel_expr '<' shift_expr
   48         | rel_expr '>' shift_expr
   49         | rel_expr T_LE_OP shift_expr
   50         | rel_expr T_GE_OP shift_expr

   51 eq_expr: rel_expr
   52        | eq_expr T_EQ_OP rel_expr
   53        | eq_expr T_NE_OP rel_expr

   54 and_expr: eq_expr
   55         | and_expr '&' eq_expr

   56 xor_expr: and_expr
   57         | xor_expr '^' and_expr

   58 or_expr: xor_expr
   59        | or_expr '|' xor_expr

   60 log_and_expr: or_expr
   61             | log_and_expr T_AND_OP or_expr

   62 log_or_expr: log_and_expr
   63            | log_or_expr T_OR_OP log_and_expr

   64 cond_expr: log_or_expr
   65          | log_or_expr '?' expr ':' cond_expr

   66 assign_expr: cond_expr
   67            | unary_expr '=' assign_expr
   68            | unary_expr T_ADD_ASSIGN assign_expr
   69            | unary_expr T_SUB_ASSIGN assign_expr
   70            | unary_expr T_MUL_ASSIGN assign_expr
   71            | unary_expr T_DIV_ASSIGN assign_expr
   72            | unary_expr T_MOD_ASSIGN assign_expr
   73            | unary_expr T_LEFT_ASSIGN assign_expr
   74            | unary_expr T_RIGHT_ASSIGN assign_expr
   75            | unary_expr T_AND_ASSIGN assign_expr
   76            | unary_expr T_XOR_ASSIGN assign_expr
   77            | unary_expr T_OR_ASSIGN assign_expr

   78 expr: assign_expr

   79 stmts: stmt
   80      | stmts stmt

   81 stmt: expr_stmt
   82     | block_stmt
   83     | func_decl
   84     | var_decl
   85     | jump_stmt
   86     | iter_stmt
   87     | sel_stmt
   88     | class_decl
   89     | ';'

   90 expr_stmt: expr ';'

   91 block_stmt: '{' '}'
   92           | '{' stmts '}'

   93 case_stmt: T_CASE expr ':'
   94          | T_CASE expr ':' stmts
   95          | T_DEFAULT ':'
   96          | T_DEFAULT ':' stmts

   97 case_list: case_stmt
   98          | case_list case_stmt

   99 sel_stmt: T_IF '(' expr ')' stmt
  100         | T_IF '(' expr ')' stmt T_ELSE stmt
  101         | T_SWITCH '(' expr ')' '{' case_list '}'
  102         | T_SWITCH '(' expr ')' '{' '}'

  103 iter_stmt: T_WHILE '(' expr ')' stmt
  104          | T_DO stmt T_WHILE '(' expr ')'

  105 jump_stmt: T_CONTINUE ';'
  106          | T_BREAK ';'
  107          | T_RETURN ';'
  108          | T_RETURN expr ';'

  109 class_field: var_decl
  110            | func_decl

  111 class_fields: class_field
  112             | class_fields class_field

  113 class_decl: T_CLASS T_IDENTIFIER '{' '}'
  114           | T_CLASS T_IDENTIFIER '{' class_fields '}'

  115 func_decl: T_FUNCTION T_IDENTIFIER '(' param_list ')' '{' '}'
  116          | T_FUNCTION T_IDENTIFIER '(' ')' '{' stmts '}'
  117          | T_FUNCTION T_IDENTIFIER '(' param_list ')' '{' stmts '}'
  118          | T_FUNCTION T_IDENTIFIER '(' ')' '{' '}'

  119 var_decl: T_LET T_IDENTIFIER
  120         | T_LET T_IDENTIFIER '=' expr ';'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 34
'%' (37) 39
'&' (38) 55
'(' (40) 6 7 8 9 18 24 25 99 100 101 102 103 104 115 116 117 118
')' (41) 6 7 8 9 18 24 25 99 100 101 102 103 104 115 116 117 118
'*' (42) 37
'+' (43) 32 41
',' (44) 5 21
'-' (45) 33 42
'.' (46) 26
'/' (47) 38
':' (58) 65 93 94 95 96
';' (59) 89 90 105 106 107 108 120
'<' (60) 47
'=' (61) 3 67 120
'>' (62) 48
'?' (63) 65
'[' (91) 23
']' (93) 23
'^' (94) 57
'{' (123) 6 7 8 9 91 92 101 102 113 114 115 116 117 118
'|' (124) 59
'}' (125) 6 7 8 9 91 92 101 102 113 114 115 116 117 118
'~' (126) 35
error (256)
T_BREAK (258) 106
T_CASE (259) 93 94
T_CLASS (260) 113 114
T_CONTINUE (261) 105
T_DEFAULT (262) 95 96
T_DO (263) 104
T_ELSE (264) 100
T_ENUM (265)
T_FOR (266)
T_FUNCTION (267) 6 7 8 9 115 116 117 118
T_GOTO (268)
T_IF (269) 99 100
T_LET (270) 119 120
T_NAMESPACE (271)
T_RETURN (272) 107 108
T_SWITCH (273) 101 102
T_WHILE (274) 103 104
T_ELLIPSIS (275)
T_RIGHT_ASSIGN (276) 74
T_LEFT_ASSIGN (277) 73
T_ADD_ASSIGN (278) 68
T_SUB_ASSIGN (279) 69
T_MUL_ASSIGN (280) 70
T_DIV_ASSIGN (281) 71
T_MOD_ASSIGN (282) 72
T_AND_ASSIGN (283) 75
T_XOR_ASSIGN (284) 76
T_OR_ASSIGN (285) 77
T_RIGHT_OP (286) 45
T_LEFT_OP (287) 44
T_INC_OP (288) 27 30
T_DEC_OP (289) 28 31
T_PTR_OP (290)
T_AND_OP (291) 61
T_OR_OP (292) 63
T_LE_OP (293) 49
T_GE_OP (294) 50
T_EQ_OP (295) 52
T_NE_OP (296) 53
T_NULL (297) 10
T_TRUE (298) 11
T_FALSE (299) 12
T_IDENTIFIER (300) 2 3 16 26 113 114 115 116 117 118 119 120
T_INT (301) 13
T_FLOAT (302) 14
T_STRING (303) 15
NO_ELSE (304)


Nonterminals, with rules where they appear

$accept (74)
    on left: 0
start (75)
    on left: 1, on right: 0
param_decl (76)
    on left: 2 3, on right: 4 5
param_list (77)
    on left: 4 5, on right: 5 6 7 115 117
func_expr (78)
    on left: 6 7 8 9, on right: 19
constant (79)
    on left: 10 11 12 13 14 15 16, on right: 17
prim_expr (80)
    on left: 17 18 19, on right: 22
arg_list (81)
    on left: 20 21, on right: 21 25
post_expr (82)
    on left: 22 23 24 25 26 27 28, on right: 23 24 25 26 27 28 29
unary_expr (83)
    on left: 29 30 31 32 33 34 35, on right: 30 31 32 33 34 35 36 37
    38 39 67 68 69 70 71 72 73 74 75 76 77
mul_expr (84)
    on left: 36 37 38 39, on right: 37 38 39 40 41 42
add_expr (85)
    on left: 40 41 42, on right: 41 42 43 44 45
shift_expr (86)
    on left: 43 44 45, on right: 44 45 46 47 48 49 50
rel_expr (87)
    on left: 46 47 48 49 50, on right: 47 48 49 50 51 52 53
eq_expr (88)
    on left: 51 52 53, on right: 52 53 54 55
and_expr (89)
    on left: 54 55, on right: 55 56 57
xor_expr (90)
    on left: 56 57, on right: 57 58 59
or_expr (91)
    on left: 58 59, on right: 59 60 61
log_and_expr (92)
    on left: 60 61, on right: 61 62 63
log_or_expr (93)
    on left: 62 63, on right: 63 64 65
cond_expr (94)
    on left: 64 65, on right: 65 66
assign_expr (95)
    on left: 66 67 68 69 70 71 72 73 74 75 76 77, on right: 67 68 69
    70 71 72 73 74 75 76 77 78
expr (96)
    on left: 78, on right: 3 18 20 21 23 65 90 93 94 99 100 101 102
    103 104 108 120
stmts (97)
    on left: 79 80, on right: 1 7 8 80 92 94 96 116 117
stmt (98)
    on left: 81 82 83 84 85 86 87 88 89, on right: 79 80 99 100 103
    104
expr_stmt (99)
    on left: 90, on right: 81
block_stmt (100)
    on left: 91 92, on right: 82
case_stmt (101)
    on left: 93 94 95 96, on right: 97 98
case_list (102)
    on left: 97 98, on right: 98 101
sel_stmt (103)
    on left: 99 100 101 102, on right: 87
iter_stmt (104)
    on left: 103 104, on right: 86
jump_stmt (105)
    on left: 105 106 107 108, on right: 85
class_field (106)
    on left: 109 110, on right: 111 112
class_fields (107)
    on left: 111 112, on right: 112 114
class_decl (108)
    on left: 113 114, on right: 88
func_decl (109)
    on left: 115 116 117 118, on right: 83 110
var_decl (110)
    on left: 119 120, on right: 84 109


State 0

    0 $accept: . start $end

    T_BREAK       shift, and go to state 1
    T_CLASS       shift, and go to state 2
    T_CONTINUE    shift, and go to state 3
    T_DO          shift, and go to state 4
    T_FUNCTION    shift, and go to state 5
    T_IF          shift, and go to state 6
    T_LET         shift, and go to state 7
    T_RETURN      shift, and go to state 8
    T_SWITCH      shift, and go to state 9
    T_WHILE       shift, and go to state 10
    T_INC_OP      shift, and go to state 11
    T_DEC_OP      shift, and go to state 12
    T_NULL        shift, and go to state 13
    T_TRUE        shift, and go to state 14
    T_FALSE       shift, and go to state 15
    T_IDENTIFIER  shift, and go to state 16
    T_INT         shift, and go to state 17
    T_FLOAT       shift, and go to state 18
    T_STRING      shift, and go to state 19
    '('           shift, and go to state 20
    '{'           shift, and go to state 21
    '+'           shift, and go to state 22
    '-'           shift, and go to state 23
    '!'           shift, and go to state 24
    '~'           shift, and go to state 25
    ';'           shift, and go to state 26

    start         go to state 27
    func_expr     go to state 28
    constant      go to state 29
    prim_expr     go to state 30
    post_expr     go to state 31
    unary_expr    go to state 32
    mul_expr      go to state 33
    add_expr      go to state 34
    shift_expr    go to state 35
    rel_expr      go to state 36
    eq_expr       go to state 37
    and_expr      go to state 38
    xor_expr      go to state 39
    or_expr       go to state 40
    log_and_expr  go to state 41
    log_or_expr   go to state 42
    cond_expr     go to state 43
    assign_expr   go to state 44
    expr          go to state 45
    stmts         go to state 46
    stmt          go to state 47
    expr_stmt     go to state 48
    block_stmt    go to state 49
    sel_stmt      go to state 50
    iter_stmt     go to state 51
    jump_stmt     go to state 52
    class_decl    go to state 53
    func_decl     go to state 54
    var_decl      go to state 55


State 1

  106 jump_stmt: T_BREAK . ';'

    ';'  shift, and go to state 56


State 2

  113 class_decl: T_CLASS . T_IDENTIFIER '{' '}'
  114           | T_CLASS . T_IDENTIFIER '{' class_fields '}'

    T_IDENTIFIER  shift, and go to state 57


State 3

  105 jump_stmt: T_CONTINUE . ';'

    ';'  shift, and go to state 58


State 4

  104 iter_stmt: T_DO . stmt T_WHILE '(' expr ')'

    T_BREAK       shift, and go to state 1
    T_CLASS       shift, and go to state 2
    T_CONTINUE    shift, and go to state 3
    T_DO          shift, and go to state 4
    T_FUNCTION    shift, and go to state 5
    T_IF          shift, and go to state 6
    T_LET         shift, and go to state 7
    T_RETURN      shift, and go to state 8
    T_SWITCH      shift, and go to state 9
    T_WHILE       shift, and go to state 10
    T_INC_OP      shift, and go to state 11
    T_DEC_OP      shift, and go to state 12
    T_NULL        shift, and go to state 13
    T_TRUE        shift, and go to state 14
    T_FALSE       shift, and go to state 15
    T_IDENTIFIER  shift, and go to state 16
    T_INT         shift, and go to state 17
    T_FLOAT       shift, and go to state 18
    T_STRING      shift, and go to state 19
    '('           shift, and go to state 20
    '{'           shift, and go to state 21
    '+'           shift, and go to state 22
    '-'           shift, and go to state 23
    '!'           shift, and go to state 24
    '~'           shift, and go to state 25
    ';'           shift, and go to state 26

    func_expr     go to state 28
    constant      go to state 29
    prim_expr     go to state 30
    post_expr     go to state 31
    unary_expr    go to state 32
    mul_expr      go to state 33
    add_expr      go to state 34
    shift_expr    go to state 35
    rel_expr      go to state 36
    eq_expr       go to state 37
    and_expr      go to state 38
    xor_expr      go to state 39
    or_expr       go to state 40
    log_and_expr  go to state 41
    log_or_expr   go to state 42
    cond_expr     go to state 43
    assign_expr   go to state 44
    expr          go to state 45
    stmt          go to state 59
    expr_stmt     go to state 48
    block_stmt    go to state 49
    sel_stmt      go to state 50
    iter_stmt     go to state 51
    jump_stmt     go to state 52
    class_decl    go to state 53
    func_decl     go to state 54
    var_decl      go to state 55


State 5

    6 func_expr: T_FUNCTION . '(' param_list ')' '{' '}'
    7          | T_FUNCTION . '(' param_list ')' '{' stmts '}'
    8          | T_FUNCTION . '(' ')' '{' stmts '}'
    9          | T_FUNCTION . '(' ')' '{' '}'
  115 func_decl: T_FUNCTION . T_IDENTIFIER '(' param_list ')' '{' '}'
  116          | T_FUNCTION . T_IDENTIFIER '(' ')' '{' stmts '}'
  117          | T_FUNCTION . T_IDENTIFIER '(' param_list ')' '{' stmts '}'
  118          | T_FUNCTION . T_IDENTIFIER '(' ')' '{' '}'

    T_IDENTIFIER  shift, and go to state 60
    '('           shift, and go to state 61


State 6

   99 sel_stmt: T_IF . '(' expr ')' stmt
  100         | T_IF . '(' expr ')' stmt T_ELSE stmt

    '('  shift, and go to state 62


State 7

  119 var_decl: T_LET . T_IDENTIFIER
  120         | T_LET . T_IDENTIFIER '=' expr ';'

    T_IDENTIFIER  shift, and go to state 63


State 8

  107 jump_stmt: T_RETURN . ';'
  108          | T_RETURN . expr ';'

    T_FUNCTION    shift, and go to state 64
    T_INC_OP      shift, and go to state 11
    T_DEC_OP      shift, and go to state 12
    T_NULL        shift, and go to state 13
    T_TRUE        shift, and go to state 14
    T_FALSE       shift, and go to state 15
    T_IDENTIFIER  shift, and go to state 16
    T_INT         shift, and go to state 17
    T_FLOAT       shift, and go to state 18
    T_STRING      shift, and go to state 19
    '('           shift, and go to state 20
    '+'           shift, and go to state 22
    '-'           shift, and go to state 23
    '!'           shift, and go to state 24
    '~'           shift, and go to state 25
    ';'           shift, and go to state 65

    func_expr     go to state 28
    constant      go to state 29
    prim_expr     go to state 30
    post_expr     go to state 31
    unary_expr    go to state 32
    mul_expr      go to state 33
    add_expr      go to state 34
    shift_expr    go to state 35
    rel_expr      go to state 36
    eq_expr       go to state 37
    and_expr      go to state 38
    xor_expr      go to state 39
    or_expr       go to state 40
    log_and_expr  go to state 41
    log_or_expr   go to state 42
    cond_expr     go to state 43
    assign_expr   go to state 44
    expr          go to state 66


State 9

  101 sel_stmt: T_SWITCH . '(' expr ')' '{' case_list '}'
  102         | T_SWITCH . '(' expr ')' '{' '}'

    '('  shift, and go to state 67


State 10

  103 iter_stmt: T_WHILE . '(' expr ')' stmt

    '('  shift, and go to state 68


State 11

   30 unary_expr: T_INC_OP . unary_expr

    T_FUNCTION    shift, and go to state 64
    T_INC_OP      shift, and go to state 11
    T_DEC_OP      shift, and go to state 12
    T_NULL        shift, and go to state 13
    T_TRUE        shift, and go to state 14
    T_FALSE       shift, and go to state 15
    T_IDENTIFIER  shift, and go to state 16
    T_INT         shift, and go to state 17
    T_FLOAT       shift, and go to state 18
    T_STRING      shift, and go to state 19
    '('           shift, and go to state 20
    '+'           shift, and go to state 22
    '-'           shift, and go to state 23
    '!'           shift, and go to state 24
    '~'           shift, and go to state 25

    func_expr   go to state 28
    constant    go to state 29
    prim_expr   go to state 30
    post_expr   go to state 31
    unary_expr  go to state 69


State 12

   31 unary_expr: T_DEC_OP . unary_expr
